// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`typography/Paragraph Default smoke-test 1`] = `
<p class="gi-paragraph-md gi-text-start gi-whitespace-normal ">
  Paragraph
</p>
`;

exports[`typography/Paragraph RightAlignment smoke-test 1`] = `
<p class="gi-paragraph-md gi-text-end gi-whitespace-normal ">
  This is a paragraph.
</p>
`;

exports[`typography/Paragraph WhitespaceBreakSpaces smoke-test 1`] = `
<p class="gi-paragraph-md gi-text-start gi-whitespace-break-spaces ">
  Hey everyone!

It's almost 2022       and we still don't know if there       is aliens living among us, or do we? Maybe the person writing this is an alien.

You will never know.
</p>
`;

exports[`typography/Paragraph WhitespacePre smoke-test 1`] = `
<p class="gi-paragraph-md gi-text-start gi-whitespace-pre ">
  Hey everyone!

It's almost 2022       and we still don't know if there       is aliens living among us, or do we? Maybe the person writing this is an alien.

You will never know.
</p>
`;

exports[`typography/Paragraph WhitespacePreWrap smoke-test 1`] = `
<p class="gi-paragraph-md gi-text-start gi-whitespace-pre-wrap ">
  Hey everyone!

It's almost 2022       and we still don't know if there       is aliens living among us, or do we? Maybe the person writing this is an alien.

You will never know.
</p>
`;
